[package]
name = "draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
pixels = "0.13.0"
softbuffer = "0.4.2"
tokio = { version = "1.37.0", features = ["full"] }
wgpu = "0.19.3"


