[package]
name = "draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }

wgpu = "0.19.3"
softbuffer = "0.4.2"

winit = { version = "0.30", features = ["rwh_05"] }
windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Shell"] }
serde = "1.0.201"

